# REF

./: CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: FindSuiteSparse.cmake
docker/: Dockerfile  ref.yml
include/: exploration.h  exploration_cmd.h  frontier_selection.h
launch/: .frontier_start.launch.swp  dsp_grid3d_gazebo.launch  frontier_exploration.launch
mission_scripts/: ewok+dsp_explore.py  explore.py
msg/: Frontier.msg  Frontiers.msg
rviz/: ref.rviz
src/: exploration.cpp  exploration_cmd.cpp  exploration_cmd_node.cpp  exploration_node.cpp  frontier_selection.cpp  frontier_selection_node.cpp  vis_next.cpp
